<resources>
    <string name="app_name">Algum</string>
    <string name="title_text">Algum</string>
    <string name="idUsuario">idUsuario</string>
    <string name="emailUsuario">email</string>
    <string name="tokenUsuario">tokenUsuario</string>
    <string name="dataSync">dataSync</string>
    <string name="userInfo">userInfo</string>

    <string name="despesa">Gastei</string>
    <string name="receita">Recebi</string>
    <string name="transferencia">Transferi</string>
    <string name="contas">Contas</string>
    <string name="contaOrigem">Conta de origem</string>
    <string name="contaDestino">Conta de destino</string>
    <string name="grupos">Grupos</string>
    <string name="despesasmes">Despesas no mês</string>
    <string name="planejadomes">Planejado</string>
    <string name="extrato">Extrato</string>

    <string name="cancelar">Cancelar</string>
    <string name="excluir">Excluir</string>


    <string name="navigation_drawer_open">Abrir menu de navegação</string>
    <string name="navigation_drawer_close">Fechar menu de navegação</string>

    <string name="action_settings">Configurações</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_add_conta">Adiciona</string>

    <string name="title_activity_main">Lançamento</string>
    <string name="title_activity_contas">Contas</string>
    <string name="title_activity_grupos">Categorias</string>
    <string name="title_activity_edit_grupo">Novo Grupo</string>
    <string name="title_activity_edit_conta">Nova Conta</string>
    <string name="title_activity_lancamento_grupos">Lançamento - Grupos</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_lancamento_valor">Lançamento - Valor</string>
    <string name="title_activity_planejamento">Planejamento</string>
    <string name="title_activity_extrato">Extrato</string>
    <string name="title_activity_situacao">Situação</string>
    <string name="title_activity_graficos">Gráficos</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Entrou como: %s</string>
    <string name="signed_in">Entrou</string>
    <string name="signing_in">Entrando…</string>
    <string name="signed_out">Saiu</string>

    <!-- Button labels -->
    <string name="sign_out">Sair</string>
    <string name="disconnect">Desconectar</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Aluras Logo</string>

    <string name="algum_server_client_id">48636432617-l6duqf4jpe3irph355fas92mqfcimfmr.apps.googleusercontent.com</string>

    <string name="base_url_contas">localhost:81/Algum_php/contas</string>


    <!-- SyncAdapter related -->
    <string name="sync_account_type">algum.com.br</string>
    <string name="content_authority">br.com.algum.algum_android.provider</string>
    <string name="WSurl">http://services.algum.com.br/</string>

    <!-- Preferences -->
    <string name="sync_freq">sync_freq</string>
    <string name="sync_ativ">sync_ativ</string>
    <string name="sync_ativ_default">true</string>
    <string name="sync_freq_title">Frequência</string>
    <string name="sync_ativ_title">Ativar</string>

    <string name="sync_freq_default">"60"</string>
    <string name="sync_title">Sincronização</string>
    <array name="sync_freq_entries">
        <item>"5 minutos"</item>
        <item>"15 minutos"</item>
        <item>"30 minutos"</item>
        <item>"1 hora"</item>
        <item>"3 horas"</item>
        <item>"6 horas"</item>
        <item>"12 horas"</item>
    </array>
    <array name="sync_freq_values">
        <item>"5"</item>
        <item>"15"</item>
        <item>"30"</item>
        <item>"60"</item>
        <item>"180"</item>
        <item>"360"</item>
        <item>"720"</item>
    </array>

    <string name="sync_full_title">Efetuar sincronização completa</string>
    <string name="sync_full">sync_full</string>

    <string name="user_title">Dados de usuário</string>
    <string name="user_remove">user_remove</string>
    <string name="user_remove_title">Sair e apagar dados do usuário do dispositivo</string>
    <string name="log_remove">log_remove</string>
    <string name="log_remove_title">Limpar log Adm</string>

</resources>
