<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/sync_title"
        android:key="pref_sync_settings">

        <SwitchPreference
            android:title="@string/sync_ativ_title"
            android:key="@string/sync_ativ"
            android:defaultValue="@string/sync_ativ_default" />

        <ListPreference
            android:title="@string/sync_freq_title"
            android:key="@string/sync_freq"
            android:defaultValue="@string/sync_freq_default"
            android:entries="@array/sync_freq_entries"
            android:entryValues="@array/sync_freq_values"
            android:dependency="@string/sync_ativ"
            android:summary="%s"/>

        <Preference
            android:title="@string/sync_full_title"
            android:key="@string/sync_full"
            />


    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/user_title">

        <Preference
            android:title="@string/user_remove_title"
            android:key="@string/user_remove"
            />

        <Preference
            android:title="@string/log_remove_title"
            android:key="@string/log_remove"
            />



    </PreferenceCategory>
</PreferenceScreen>