<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LancamentoGruposActivity"
    android:id="@+id/content_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/botoesValores">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/desGrupo"
            android:paddingLeft="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTipoLancamento"
                android:textColor="@color/colorText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtGastoGrupo"
                android:paddingLeft="5dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desGrupo"
            android:paddingLeft="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtConta"
                android:textColor="@color/colorText" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtSaldoConta"
                android:paddingLeft="5dp"/>

        </LinearLayout>
    </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contas"
                android:id="@+id/txtContaOrigem"
                android:layout_below="@+id/botoesValores"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="5dp" />

            <GridView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/gridViewGrupos"
                android:layout_below="@+id/txtContaOrigem"
                android:columnWidth="100dp"
                android:numColumns="auto_fit"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:horizontalSpacing="4dp"
                android:verticalSpacing="4dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:visibility="gone">

        <br.com.algum.algum_android.customViews.PercentView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/percent"
            app:value="37.3"
            app:startColor="@color/receita"
            app:endColor="@color/despesa"
            android:padding="5dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:paddingRight="5dp"
            android:layout_marginBottom="25dp"
            android:baselineAligned="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="top"
                android:layout_marginRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/despesasmes"
                    android:id="@+id/textView9" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planejadomes"
                    android:id="@+id/textView10" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 2.325,87"
                    android:id="@+id/textView7" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 6.234,98"
                    android:id="@+id/textView8" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
